<resources>
    <string name="app_name">USurf</string>
    <string name="nav_header_title">USurf</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="empty" />
    <string name="menu_home">Home</string>
    <string name="menu_ftp">FTP</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_info">Information</string>
    <string name="root_explorer">Root explorer</string>
    <string name="root_explorer_summary">Check this box to gain access to root directory. For rooted devices only.</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending_order">Ascending order</string>
    <string name="descending_order">Descending order</string>
    <string name="applogo_description">appLogo</string>
    <string name="developer">Developer:</string>
    <string name="yusuf_erman_ergoz">Yusuf Erman ERGÖZ</string>
    <string name="version">Version:</string>
    <string name="app_version" translatable="false">2.0.0</string>
    <string name="github">Github:</string>
    <string name="github_link">https://github.com/ermanergoz/USurf</string>
    <string name="icons_those_icons">Device-wide Search icon and Menu icon by Those Icons from flaticon.com</string>
    <string name="those_icons_url">https://www.flaticon.com/authors/those-icons</string>
    <string name="icons_kiranshastry">Delete icon by Kiranshastry from flaticon.com</string>
    <string name="kiranshastry_url">https://www.flaticon.com/authors/kiranshastry</string>
    <string name="icons_iconixar">Move icon and compress icon by iconixar from flaticon.com</string>
    <string name="iconixar_url">https://www.flaticon.com/authors/iconixar</string>
    <string name="icons_smashicons">Home icon by Smashicons from flaticon.com</string>
    <string name="smashicons_url">https://www.flaticon.com/authors/smashicons</string>
    <string name="storage_icon">Storage icon by srip from flaticon.com</string>
    <string name="srip_url">https://www.flaticon.com/authors/srip</string>
    <string name="icons_roundicons">Up and down arrow icons by Roundicons from flaticon.com</string>
    <string name="round_icons_url">https://www.flaticon.com/authors/roundicons</string>
    <string name="icons_freepic">Information icon, rename icon, share icon and extract icon by Freepic from flaticon.com</string>
    <string name="freepic_url">https://www.flaticon.com/authors/freepik</string>
    <string name="pix_perfect_link">https://www.flaticon.com/authors/pixel-perfect</string>
    <string name="icons_pix_perfect">Preferences icon, copy icon, favorite icon and FTP icon by Pixel perfect from flaticon.com</string>
    <string name="icons">Icons:</string>
    <string name="xnimrodx_url">https://www.flaticon.com/authors/xnimrodx</string>
    <string name="url">URL:</string>
    <string name="folder_icon">Folder icon and file icon by xnimrodx from flaticon.com</string>
    <string name="wifi_status">WiFi Status:</string>
    <string name="port">Port:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="connected">Connected</string>
    <string name="no_connection">No Connection</string>
    <string name="port_error">Try entering shorter number! The value is set to default.</string>
    <string name="ftp_broadcast_receiver">com.erman.usurf.fileBroadcastReceiver</string>
    <string name="unsupported_file">There is no application that supports the file.</string>
    <string name="unable_to_open_directory">Unable to open the directory.</string>
    <string name="error_while_renaming">"Error while renaming: "</string>
    <string name="renaming_successful">Renamed</string>
    <string name="error_while_deleting">"Error while deleting"</string>
    <string name="deleting_successful">Deleted</string>
    <string name="folder_creation_successful">"New folder created"</string>
    <string name="error_when_creating_folder">"Error while creating new folder"</string>
    <string name="file_creation_successful">"New file created"</string>
    <string name="error_when_creating_file">"Error while creating new file"</string>
    <string name="copy_successful">Copied</string>
    <string name="error_while_copying">Error while copying</string>
    <string name="moving_successful">Moved</string>
    <string name="error_while_moving">Error while moving</string>
    <string name="compressing_successful">Compressed</string>
    <string name="error_while_compressing">Error while compressing</string>
    <string name="extracting_successful">Extracted</string>
    <string name="error_while_extracting">Error while extracting</string>
    <string name="su_not_found">Device is not rooted.</string>
    <string name="root_access_denied">Root access was denied.</string>
    <string name="name">Name:</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="permission">Permissions:</string>
    <string name="last_modification_date">Last modification date:</string>
    <string name="extension">Extension:</string>
    <string name="hidden_file">Hidden</string>
    <string name="empty_folder">Empty</string>
    <string name="copy_file">Copy</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="create_file">Create new file</string>
    <string name="delete">Delete</string>
    <string name="compress">Compress</string>
    <string name="extract">Extract</string>
    <string name="information">Information</string>
    <string name="share">Share</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file">New File.txt</string>
    <string name="new_favorite">New Favorite</string>
    <string name="new_compressed">New.zip</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="favorite">Favorite</string>
    <string name="addFavorite">Add Favorite</string>
    <string name="compressing">Compressing</string>
    <string name="extracting">Extracting</string>
    <string name="deleting">Deleting</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="renaming">Renaming</string>
    <string name="creating">Creating</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="favorite_created">Added to favorites</string>
    <string name="unable_to_create_favorite">Unable to add to favorites</string>
    <string name="unable_to_create_favorite_no_name">Unable to add to favorites. Name is not provided!</string>
    <string name="favorite_deleted">Favorite deleted</string>
    <string name="unable_to_delete_favorite">Unable to delete the favorite</string>
    <string name="favorite_renamed">Favorite renamed</string>
    <string name="unable_to_rename_favorite">Unable to rename the favorite</string>
    <string name="invalid_favorite">Invalid favorite. Try removing it!</string>
    <string name="ftp_server_is_running">Ftp Server is running</string>
    <string name="ftp_notification_channel_name">FTPNotificationChannel</string>
    <string name="ftp_notification_channel_description">FTP notification channel</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="share_directory">Operation not supported for following. Not a file </string>
    <string name="create_new">Create new</string>
    <string name="device_wide_search">Device-wide search</string>
    <string name="i_understand">I understand</string>
    <string name="manage_all_files_message">In order this application to work, \"Allow access to manage all files\" setting needs to be turned on.</string>
    <string name="storage_permission_not_granted">Storage permission is not granted.</string>
    <string name="storage_permission_rationale">Storage permission is required for the file manager to access your files.</string>
    <string name="notification_permission_not_granted">Notification permission is not granted. FTP server notifications will not be shown.</string>
    <string name="saf_access_message">Please choose the root directory of the removable storage to grant write permission to operate.</string>
    <string name="supported_compression_formats">Supported formats are: 7z bzip2 gzip tar wim xz zip</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://ermanergoz.github.io/policies/usurf-privacy-policy.html</string>
    <string name="tb" translatable="false">TB</string>
    <string name="gb" translatable="false">GB</string>
    <string name="mb" translatable="false">MB</string>
    <string name="kb" translatable="false">KB</string>
    <string name="bytes">Bytes</string>
    <string name="file_count">Files</string>
    <string name="more">More</string>
    <string name="hint_port">Port</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="section_storage">Storage</string>
    <string name="section_favorites">Favorites</string>
    <string name="empty_favorites_title">No favorites yet</string>
    <string name="empty_favorites_subtitle">Long press a folder to add it as a favorite</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="root_storage">Root</string>
    <string name="storage_usage_format" translatable="false">%1$s / %2$s</string>
    <string name="ftp_section_status">Connection</string>
    <string name="ftp_section_settings">Server Settings</string>
    <string name="ftp_section_storage">Storage Path</string>
    <string name="ftp_url_copied">URL copied to clipboard</string>
    <string name="ftp_not_connected_hint">Connect to WiFi to start FTP server</string>
    <string name="ftp_server_active">FTP Server Active</string>
    <string name="wifi_icon">WiFi status icon</string>
    <string name="copy_url">Copy URL</string>
    <string name="show_thumbnails">Show thumbnails</string>
    <string name="show_thumbnails_summary">Show image and video previews</string>
    <string name="show_hidden_files_summary">Display files starting with a dot</string>
    <string name="pref_category_sorting">Sorting</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="empty_folder_title">This folder is empty</string>
    <string name="empty_folder_subtitle">Create files or folders using the + button</string>
    <string name="path_icon">Path icon</string>
    <string name="loading_text">Loading…</string>
    <string name="loading_description">Loading</string>
    <string name="action_progress_description">Operation in progress</string>
</resources>