<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_8"
        android:layout_marginTop="@dimen/layout_margin_8"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:layout_marginBottom="@dimen/layout_margin_8"
            android:background="@drawable/side_nav_bar"
            android:contentDescription="@string/applogo_description"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:text="@string/yusuf_erman_ergoz"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:text="@string/app_version"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/github"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/github_link"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/privacy_policy_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:text="@string/icons_pix_perfect"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/pix_perfect_link"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons_freepic"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/freepic_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons_those_icons"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/those_icons_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons_smashicons"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/smashicons_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/storage_icon"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/srip_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons_roundicons"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/round_icons_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons_kiranshastry"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/kiranshastry_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/icons_iconixar"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/iconixar_url"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:text="@string/folder_icon"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8"
            android:layout_marginLeft="@dimen/layout_margin_8"
            android:text="@string/xnimrodx_url"
            android:autoLink="web"
            android:singleLine="true"
            android:textSize="@dimen/text_size_18"
            android:layout_marginBottom="@dimen/vertical_margin_32"/>

    </LinearLayout>
</ScrollView>
