<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="favoriteName"
            type="String" />

        <variable
            name="uiState"
            type="com.erman.usurf.home.ui.HomeUiState" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/horizontal_margin_24"
        android:paddingTop="@dimen/vertical_margin_16"
        android:paddingEnd="@dimen/horizontal_margin_24"
        android:paddingBottom="@dimen/vertical_margin_16">

        <Button
            android:id="@+id/renameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selectable_background"
            android:text="@string/rename"
            android:textColor="@color/daynnightTextColor"
            android:visibility="@{uiState.isRenameMode ? View.GONE : View.VISIBLE}" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_8"
            android:background="@drawable/button_selectable_background"
            android:text="@string/delete"
            android:textColor="@color/daynnightTextColor"
            android:visibility="@{uiState.isRenameMode ? View.GONE : View.VISIBLE}" />

        <EditText
            android:id="@+id/renameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@{favoriteName}"
            android:textColor="@color/daynnightTextColor"
            android:textColorHint="@color/sectionHeaderColor"
            android:textSize="@dimen/text_size_16"
            android:visibility="@{uiState.isRenameMode ? View.VISIBLE : View.GONE}" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_8"
            android:background="@drawable/button_selectable_background"
            android:text="@string/ok"
            android:textColor="@color/daynnightTextColor"
            android:visibility="@{uiState.isRenameMode ? View.VISIBLE : View.GONE}" />

    </LinearLayout>
</layout>
