<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="shortcutView"
            type="android.widget.TextView" />

        <variable
            name="viewModel"
            type="com.erman.usurf.home.ui.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/renameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_selectable_background"
            android:onClick="@{() -> viewModel.renameShortcut(shortcutView.text.toString())}"
            android:text="@string/rename"
            android:visibility="@{viewModel.isRenameMode ? View.GONE : View.VISIBLE}" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_selectable_background"
            android:text="@string/delete"
            android:visibility="@{viewModel.isRenameMode ? View.GONE : View.VISIBLE}" />

        <EditText
            android:id="@+id/renameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@{shortcutView.text.toString()}"
            android:visibility="@{viewModel.isRenameMode ? View.VISIBLE : View.GONE}" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_selectable_background"
            android:text="@string/ok"
            android:visibility="@{viewModel.isRenameMode ? View.VISIBLE : View.GONE}" />

    </LinearLayout>
</layout>